# orch

./: .gitignore  README.md  orch_implementation_guide.md  pyproject.toml
.github/workflows/: ci.yml
examples/: plan_basic.yaml  plan_cancel.yaml  plan_fail_retry.yaml  plan_parallel.yaml
src/orch/: __init__.py  cli.py
src/orch/config/: __init__.py  loader.py  schema.py
src/orch/dag/: __init__.py  build.py  validate.py
src/orch/exec/: cancel.py  capture.py  retry.py  runner.py  timeout.py
src/orch/report/: __init__.py  render_md.py  summarize.py
src/orch/state/: __init__.py  lock.py  model.py  store.py
src/orch/util/: __init__.py  errors.py  ids.py  path_guard.py  paths.py  tail.py  time.py
tests/: test_cancel_integration.py  test_cli_helpers.py  test_cli_integration.py  test_dag_build.py  test_dag_validate.py  test_dod_check_tool.py  test_exec_helpers.py  test_path_guard.py  test_plan_loader.py  test_plan_loader_success_cases.py  test_plan_validation_edges.py  test_report_integration.py  test_report_modules.py  test_resume_integration.py  test_run_lock.py  test_runner_integration.py  test_state_model.py  test_state_store.py  test_utils_core.py  test_utils_retry_tail.py
tools/: dod_check.py  fake_agent.py
